unpackaged/main/default/objects/Recommendation_score__c/Recommendation_score__c.object-meta.xml
<CustomObject>
    <description>Cet objet permet de récupérer les information NPS des contacts depuis Qualtrics.</description>
    <label>Recommendation score</label>
    <nameField>
        <displayFormat>Survey- {000000000}</displayFormat>
        <label>Recommendation score name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recommendations scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>