unpackaged/main/default/objects/Recommendation_score__c/fields/Asked_to_be_contacted_back__c.field-meta.xml
<CustomField>
    <fullName>Asked_to_be_contacted_back__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Question only asked if recommendation score ≤ 6. Customer confirms if he/she wants to be contacted back or not</inlineHelpText>
    <label>Asked to be contacted back</label>
    <type>Checkbox</type>
</CustomField>