unpackaged/main/default/objects/Recommendation_score__c/fields/Date_of_answer__c.field-meta.xml
<CustomField>
    <fullName>Date_of_answer__c</fullName>
    <inlineHelpText>Date of customer's answer</inlineHelpText>
    <label>Date of answer</label>
    <type>Date</type>
</CustomField>