unpackaged/main/default/objects/Recommendation_score__c/fields/Full_response__c.field-meta.xml
<CustomField>
    <fullName>Full_response__c</fullName>
    <label>Full response</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>