unpackaged/main/default/objects/Recommendation_score__c/fields/Recommendation_comment__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_comment__c</fullName>
    <inlineHelpText>Comment of the customer (not mandatory)</inlineHelpText>
    <label>Recommendation comment</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>