unpackaged/main/default/objects/Recommendation_score__c/fields/Recommendation_score__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_score__c</fullName>
    <inlineHelpText>Customer's answer to the question : would you like to recommend Cegid (scale from 0 to 10)</inlineHelpText>
    <label>Recommendation score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>