unpackaged/main/default/objects/Recommendation_score__c/fields/RecommendationScoreId18__c.field-meta.xml
<CustomField>
    <fullName>RecommendationScoreId18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RecommendationScoreId18</label>
    <type>Text</type>
</CustomField>