unpackaged/main/default/objects/Recommendation_score__c/fields/Survey_Wave__c.field-meta.xml
<CustomField>
    <fullName>Survey_Wave__c</fullName>
    <label>Survey Wave</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>