unpackaged/main/default/objects/Recommendation_score__c/fields/Team_in_charge_of_contacting_back__c.field-meta.xml
<CustomField>
    <fullName>Team_in_charge_of_contacting_back__c</fullName>
    <label>Team in charge of contacting back</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>No call back required</fullName>
            </value>
            <value>
                <fullName>CSM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>